--- a/src/styles/common/_vars.sass
+++ b/src/styles/common/_vars.sass
@@ -33,5 +33,6 @@ $color-Gray_5: #f5f5f5
 $color-Gray-bonus-box: #EDEEF0
 $color-Gray-pagination: #A3A3A3
 $color-breadcrumbs: #515151
+$color-Error: #881818d2
 
 
