--- a/src/styles/pages/index.sass
+++ b/src/styles/pages/index.sass
@@ -156,7 +156,7 @@
     z-index: 5
     cursor: pointer
     &:hover>.slider3__fav-img
-        transform: scale(115%)
+        transform: scale(1.15)
 .fav-btn._active
     .slider3__fav-img
         color: $color-Black
@@ -180,7 +180,7 @@
             .slider3__img-box
                 filter: brightness(0.7)
                 z-index: 0
-                transform: scaleX(-1)// временное решение ToDo по ховеру должна появляться фотография обратной стороны
+                transform: scaleX(-1)// временное решение. ToDo по ховеру должна появляться фотография обратной стороны
 
     .add-to-cart
         &__box
@@ -297,7 +297,7 @@
         margin-bottom: 41px
     &__slider
         width: 1870px
-        // overflow: hidden
+        overflow: hidden
     .slider4
         width: 100%
         .swiper-button-next
