--- a/src/templates/pages/good-card.pug
+++ b/src/templates/pages/good-card.pug
@@ -46,10 +46,10 @@ block content
                                     small.good-card__available-colors Доступные цвета
                                     .good-card__form-inputs
                                         label.good-card__label
-                                            input(type="checkbox" name="available colors")
+                                            input(type="radio" name="available colors" value="1")
                                             span.span01
                                         label.good-card__label
-                                            input(type="checkbox" name="available colors")
+                                            input(type="radio" name="available colors" value="2")
                                             span.span02
                                     .good-card__select-wrapper
                                         select.good-card__select(name="choose size")
