--- a/src/templates/pages/index.pug
+++ b/src/templates/pages/index.pug
@@ -54,7 +54,7 @@ block content
                             a.map-table__link(href="favorite.html" target="_blank") Избранное
                     tr
                         td
-                            a.map-table__link(href="search-result.html" target="_blank") Результат поиска
+                            a.map-table__link(href="search.html" target="_blank") Результат поиска
                         td
                             a.map-table__link.modal__link(href="#modal01") Поисковая строка (modal)
                     tr
