--- a/src/templates/pages/search.pug
+++ b/src/templates/pages/search.pug
@@ -1,7 +1,7 @@
 extends ../template
 
 block variables
-	- var title = 'Результат поиска'
+	- var title = 'Поиск'
 	- var contactForm = false
 
 block content
