--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -46,7 +46,7 @@ button
 @import ./pages/contacts
 @import ./pages/my-data
 @import ./pages/favorite
-@import ./pages/search-result
+@import ./pages/search
 @import ./pages/order-complete
 @import ./pages/not-found
 @import ./common/footer
