--- a/src/styles/common/modal.sass
+++ b/src/styles/common/modal.sass
@@ -38,14 +38,17 @@
         right: 0
         padding: 20px
         background-color: transparent
+        transition: transform 0.3s ease 0s
+        svg 
+            color: $color-Black
         &:hover
-            transform: scale(110%)
+            transform: scale(1.1)
     &__form
         display: flex
         flex-direction: column
         justify-content: center
-        align-items: center
-        gap: 30px
+        align-items: flex-start
+        // gap: 30px
         margin: 32px 0 0 0
         width: 100%
         height: 100%
@@ -58,6 +61,7 @@
             font-size: 16px
             line-height: 140%
             color: $color-Black
+            margin-bottom: 30px
             &:placeholder
 
     &__search
@@ -124,11 +128,12 @@
         padding: 50px 30px 38px 30px
     &__sign-in-btn-block
         width: 100%
+        max-width: 350px
         display: flex
-        justify-content: flex-start
+        justify-content: space-between
         align-items: center
-        gap: 30px
-        margin: 10px 0 -10px 0
+        // gap: 30px
+        margin: 10px 0 20px 0
     &__sign-in-btn-in
         display: flex
         justify-content: center
