--- a/src/styles/pages/contacts.sass
+++ b/src/styles/pages/contacts.sass
@@ -6,12 +6,12 @@
 		width: 100%
 		margin: 40px 0 0 0
 	&__cols
-		display: flex
-		justify-content: flex-start
+		display: grid
+		grid-template-columns: repeat(auto-fit, minmax(125px, 1fr))
 		width: 100%
 		max-width: 1120px
-		gap: 30px
-		flex-wrap: wrap
+		grid-gap: 60px
+
 	&__col
 		flex: 1 1 auto
 	&__col-title
@@ -31,12 +31,13 @@
 		width: 100%
 		display: flex
 		justify-content: space-between
-		gap: 5px
+		margin: 0 -5px
 	&__social-link
 		display: flex
 		justify-content: center
 		align-items: center
 		border-radius: 50%
+		margin: 0 5px
 		&:hover
 			box-shadow: 0 0 2px 2px $color-graphite
 	&__social-icon
