--- a/src/styles/pages/my-data.sass
+++ b/src/styles/pages/my-data.sass
@@ -8,7 +8,7 @@
 		gap: 20px
 	&__nav
 		flex: 0 333px
-		margin: 0
+		margin: 0 20px 20px 0
 	&__bonus-box
 		margin: 47px 0 0 0
 	&__bonus-content
@@ -31,24 +31,24 @@
 	&__tabs-items
 		flex: 1 1 auto
 	&__tabs-block#block01
-		margin: 0 0 0 107px
+		margin: 0 0 0 97px
 	&__form
 		width: 100%
-		max-width: 570px
-		padding: 0 10px 5px 0
+		max-width: 550px
 		display: flex
-		flex-direction: column
-		justify-content: flex-start
-		align-items: center
-		gap: 30px
+		flex-direction: column	
 	&__form-label
 		width: 100%
 		margin: 40px 0 0 0
 		display: flex
 		flex-direction: column
-		row-gap: 27px
 		font-size: 18px
 		line-height: 21px
+		input:first-child
+			margin: 27px 0 30px 0
+		&_pass-check
+			width: 100%
+			position: relative
 	&__form-input
 		width: 100%
 		min-height: 50px
@@ -57,17 +57,32 @@
 		background-color: $color-Gray_4
 		border: 1px solid #D9D9D9
 		padding: 14px 20px
+		margin: 0 0 30px 0
 		&:hover,
 		&:focus
 			box-shadow: 0 0 3px 3px $color-Gray_3
+	&__form-input.not-the-same
+		box-shadow: 0 0 3px 3px $color-Error
+	.pass-error
+		position: absolute
+		left: 0
+		top: 120%
+		visibility: visible
+		opacity: 1
+		pointer-events: none
+		user-select: none
+		color: $color-Error
+	.pass-error._hidden
+		visibility: hidden
+		opacity: 0
 	&__form-link,
 	&__form-btn
 		align-self: flex-start
 	&__form-link
-		margin: -20px 0 0 0
+		margin: -10px 0 0 0
 		font-size: 16px
 		line-height: 18px
-		// text-decoration: underline
+		width: fit-content
 		color: $color-Black
 		padding: 10px 1px
 		border-radius: 5px
@@ -87,7 +102,7 @@
 		&:focus
 			box-shadow: 0 0 2px 2px $color-Gray_3
 	&__form-btn
-		margin: 8px 0 0 0
+		margin: 48px 0 0 0
 		width: 100%
 		max-width: 138px
 		min-height: 50px
@@ -193,7 +208,7 @@
 		display: flex
 		justify-content: space-between
 		align-items: flex-start
-		column-gap: 32px
+		// column-gap: 32px
 		padding: 20px 0
 		border-bottom: 1px solid #F3F3F3
 		&__total
@@ -204,13 +219,17 @@
 
 	.ac-content-col
 		flex: 1 1 auto
+		margin-left: 30px
 		&:first-child
 			flex: 0 0 433px
+			margin-left: 0
 		&__items
 			display: flex
-			column-gap: 32px
+			// column-gap: 32px
 		&__item:first-child
 			flex: 0 0 107px
+		&__item
+			margin-right: 32px
 		&__item:last-child
 			flex: 0 0 228px	
 		&__total
@@ -221,10 +240,13 @@
 			display: flex
 			flex-direction: column
 			justify-content: flex-start
-			row-gap: 5px
+			// row-gap: 5px
 			font-size: 16px
 			line-height: 140%
 			color: $color-black_3
+			.total__order,
+			.total__order-value
+				margin-bottom: 5px
 			.total__ammount,
 			.total__ammount-value
 				margin-top: auto
