--- a/src/styles/pages/not-found.sass
+++ b/src/styles/pages/not-found.sass
@@ -8,7 +8,6 @@
         flex-direction: column
         justify-content: center
         align-items: center
-        gap: 50px
     &__title
         font-weight: bold
         font-size: 36px
@@ -17,6 +16,7 @@
     &__text-block
         max-width: 824px
         width: 100%
+        margin-bottom: 50px
     &__text
         font-weight: bold
         font-size: 24px
@@ -40,4 +40,4 @@
         font-weight: bold
         font-size: 120px
         line-height: 166px
-        margin: 10px 0 0 0
+        margin: 60px 0 0 0
