--- a/src/styles/common/modal.sass
+++ b/src/styles/common/modal.sass
@@ -39,7 +39,7 @@
         padding: 20px
         background-color: transparent
         transition: transform 0.3s ease 0s
-        svg 
+        svg
             color: $color-Black
         &:hover
             transform: scale(1.1)
@@ -97,6 +97,7 @@
             line-height: 140%
             background-color: $color-graphite
             color: $color-White
+            appearance: none
 
     &__search-button
         position: absolute
