--- a/src/templates/components/header.pug
+++ b/src/templates/components/header.pug
@@ -21,7 +21,8 @@ header.header-top.lock-padding
 					li.header-top__list-item.menu__item
 						a(href="my-data.html").header-top__menu-link.menu__link Аккаунт
 					li.header-top__list-item.menu__item
-						a(href="cart.html").header-top__menu-link.menu__link Корзина
+						a(href="cart.html").header-top__menu-link.menu__link.cart-link Корзина
+							span.cart-link-span 1
 					li.header-top__list-item.menu__item
 						a(href="#modal01").header-top__menu-link.menu__link.modal__link Поиск
 		.header-top__logo-box.lock-padding
