--- a/src/styles/common/header.sass
+++ b/src/styles/common/header.sass
@@ -36,6 +36,31 @@ header._hidden
 		margin: 0 4px 0 0
 	&__menu-link:hover
 		text-decoration: underline
+	.cart-link
+		position: relative
+	.cart-link-span
+		position: absolute
+		top: -5px
+		left: auto
+		right: 0px
+		width: 25px
+		height: 25px
+		display: inline-flex
+		justify-content: center
+		align-items: center
+		border-radius: 50%
+		background-color: $color-White
+		color: $color-graphite
+		font-size: 14px
+		line-height: 110%
+		visibility: visible
+		opacity: 1
+		transition: visibility 0.3s ease 0s
+	.cart-link-span._hidden
+		visibility: hidden
+		opacity: 0
+		pointer-events: none
+		user-select: none
 	&__logo-box
 		position: absolute
 		top: 20px
@@ -108,7 +133,7 @@ header._white
 		font-size: 48px
 		line-height: 48px
 		color: $color-White
-	
+
 	&__banner._hidden
 		display: none
 
@@ -149,7 +174,7 @@ header._white
 		align-items: center
 		&_for-men._hidden,
 		&_for-women._hidden,
-		&_collections._hidden, 
+		&_collections._hidden,
 		&_kinds-of-sports._hidden // На проде этb модификаторs, скорее всего, не понадобятся
 			display: none
 	&__link
